--- a/runner/docker/Dockerfile.live-app-comfyui
+++ b/runner/docker/Dockerfile.live-app-comfyui
@@ -2,19 +2,6 @@ ARG PIPELINE=comfyui
 ARG BASE_IMAGE=livepeer/ai-runner:live-base-${PIPELINE}
 FROM ${BASE_IMAGE}
 
-WORKDIR /app/comfystream
-
-RUN apt-get update && apt-get install -y \
-    wget \
-    libcairo2-dev \
-    libgirepository1.0-dev \
-    pkg-config \
-    && apt-get clean && rm -rf /var/lib/apt/lists/*
-
-# Install any additional Python packages
-COPY requirements.live-ai.txt /app/requirements.txt
-RUN pip install --no-cache-dir -r /app/requirements.txt
-
 # Set environment variables
 ENV MAX_WORKERS=1
 ENV HUGGINGFACE_HUB_CACHE=/models
@@ -28,7 +15,4 @@ COPY bench.py /app/bench.py
 
 WORKDIR /app
 
-# check if this dependency mismatch causes any issues
-RUN pip install torch==2.5.1 || true
-
-CMD ["python", "server/app.py", "--workspace", "/comfyui", "--port", "3389", "--host", "0.0.0.0"]
+CMD ["uvicorn", "app.main:app", "--log-config", "app/cfg/uvicorn_logging_config.json", "--host", "0.0.0.0", "--port", "8000"]
