--- a/runner/.devcontainer/devcontainer.json
+++ b/runner/.devcontainer/devcontainer.json
@@ -29,6 +29,6 @@
 	// Use 'mounts' to make a list of local folders available inside the container.
 	"mounts": [
 		// "source=${localWorkspaceFolder}/models,target=/models,type=bind"
-		"source=${localEnv:HOME}/.lpData/models,target=/models,type=bind"
+		// "source=${localEnv:HOME}/.lpData/models,target=/models,type=bind"
 	]
 }
