--- a/runner/docker/Dockerfile.live-base-streamdiffusion
+++ b/runner/docker/Dockerfile.live-base-streamdiffusion
@@ -29,3 +29,7 @@ RUN pip install git+https://github.com/cumulo-autumn/StreamDiffusion.git@765d710
 # Install TensorRT extension
 RUN python -m streamdiffusion.tools.install-tensorrt
 
+WORKDIR /app
+
+# Create symlink for where StreamDiffusion builds TensorRT engines at runtime
+RUN ln -s /models/StreamDiffusion--engines ./engines
