.github: Rename noop job for consistency

--- a/.github/workflows/ai-runner-live-docker.yaml
+++ b/.github/workflows/ai-runner-live-docker.yaml
@@ -136,7 +136,7 @@ jobs:
           cache-to: type=registry,ref=livepeerci/build:cache,mode=max
 
   build-noop:
-    name: Build noop pipeline image
+    name: Build pipeline image (noop)
     needs: build-common-base
     runs-on: ubuntu-20.04
     steps:
