Add fail-fast: false
confyui still needs ton of disk

--- a/.github/workflows/ai-runner-live-docker.yaml
+++ b/.github/workflows/ai-runner-live-docker.yaml
@@ -72,6 +72,7 @@ jobs:
     strategy:
       matrix:
         pipeline: [streamdiffusion, comfyui, liveportrait]
+      fail-fast: false
     steps:
       - name: Check out code
         uses: actions/checkout@v4.1.1
