--- a/.github/workflows/ai-runner-pipelines-docker.yaml
+++ b/.github/workflows/ai-runner-pipelines-docker.yaml
@@ -42,13 +42,7 @@ jobs:
           ref: ${{ github.event.pull_request.head.sha }}
 
       - name: Cleanup hosted runner
-        run: |
-          sudo apt purge -yqq dotnet-* mono-* llvm-* libllvm* powershell* openjdk-* \
-          temurin-* mongodb-* firefox mysql-* \
-          hhvm google-chrome-stable \
-          libgl1-mesa-dri microsoft-edge-stable azure-cli || true
-          sudo apt autoremove -y
-          sudo rm -rf /usr/share/dotnet /usr/local/lib/android
+        uses: ./.github/actions/cleanup-runner
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
