--- a/.github/workflows/ai-runner-live-pipelines-docker.yaml
+++ b/.github/workflows/ai-runner-live-pipelines-docker.yaml
@@ -34,8 +34,21 @@ jobs:
           fetch-depth: 0
           ref: ${{ github.event.pull_request.head.sha }}
 
+      - name: Check if build needed
+        id: check_build
+        if: |
+          github.event_name == 'workflow_dispatch' ||
+          github.event_name == 'push' ||
+          (
+            github.event_name == 'pull_request' &&
+            github.event.pull_request.head.repo.full_name == github.repository &&
+            contains(github.event.pull_request.files.*.filename, 'runner/docker/Dockerfile.live-base')
+          )
+        run: echo "should_build=true" >> $GITHUB_OUTPUT
+
       - name: Cleanup hosted runner
         uses: ./.github/actions/cleanup-runner
+        if: steps.check_build.outputs.should_build == 'true'
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -48,14 +61,7 @@ jobs:
 
       - name: Build and push live-base image
         uses: docker/build-push-action@v5
-        if: |
-          github.event_name == 'workflow_dispatch' ||
-          github.event_name == 'push' ||
-          (
-            github.event_name == 'pull_request' &&
-            github.event.pull_request.head.repo.full_name == github.repository &&
-            contains(github.event.pull_request.files.*.filename, 'runner/docker/Dockerfile.live-base')
-          )
+        if: steps.check_build.outputs.should_build == 'true'
         with:
           context: "{{defaultContext}}:runner"
           platforms: linux/amd64
