--- a/.github/workflows/ai-runner-live-pipelines-docker.yaml
+++ b/.github/workflows/ai-runner-live-pipelines-docker.yaml
@@ -188,17 +188,6 @@ jobs:
     runs-on: ubuntu-20.04
     permissions:
       pull-requests: read
-    if: |
-      github.event_name == 'workflow_dispatch' ||
-      github.event_name == 'push' ||
-      (
-        github.event_name == 'pull_request' &&
-        github.event.pull_request.head.repo.full_name == github.repository &&
-        (
-          contains(github.event.pull_request.files.*.filename, 'runner/docker/Dockerfile.live-app-noop') ||
-          contains(github.event.pull_request.files.*.filename, 'runner/app/')
-        )
-      )
     steps:
       - name: Check out code
         uses: actions/checkout@v4.1.1
@@ -206,8 +195,29 @@ jobs:
           fetch-depth: 50
           ref: ${{ github.event.pull_request.head.sha }}
 
+      - name: Get changed files
+        id: changed-files
+        uses: tj-actions/changed-files@v45
+        with:
+          files: |
+            runner/docker/Dockerfile.live-app-noop
+            runner/app/**
+
+      - name: Check if build needed
+        id: check_build
+        if: |
+          github.event_name == 'workflow_dispatch' ||
+          github.event_name == 'push' ||
+          (
+            github.event_name == 'pull_request' &&
+            github.event.pull_request.head.repo.full_name == github.repository &&
+            steps.changed-files.outputs.any_changed == 'true'
+          )
+        run: echo "should_build=true" >> $GITHUB_OUTPUT
+
       - name: Cleanup hosted runner
         uses: ./.github/actions/cleanup-runner
+        if: steps.check_build.outputs.should_build == 'true'
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -232,6 +242,7 @@ jobs:
 
       - name: Build and push noop image
         uses: docker/build-push-action@v5
+        if: steps.check_build.outputs.should_build == 'true'
         with:
           context: "{{defaultContext}}:runner"
           platforms: linux/amd64
