--- a/runner/docker/Dockerfile.live-base-streamdiffusion
+++ b/runner/docker/Dockerfile.live-base-streamdiffusion
@@ -31,5 +31,5 @@ RUN python -m streamdiffusion.tools.install-tensorrt
 
 WORKDIR /app
 
-# Create symlink for where StreamDiffusion accesses (or builds) TensorRT engines at runtime
+# Create symlink for where StreamDiffusion builds TensorRT engines at runtime
 RUN ln -s /models/StreamDiffusion--engines ./engines
