.github: Fix debug steps

--- a/.github/workflows/ai-runner-live-pipelines-docker.yaml
+++ b/.github/workflows/ai-runner-live-pipelines-docker.yaml
@@ -44,7 +44,7 @@ jobs:
       - name: Debug file check
         run: |
           echo "Base Dockerfile changed: ${{ steps.changed-files.outputs.any_changed }}"
-          echo "Changed files: ${{ steps.changed-files.outputs.any_changed_files }}"
+          echo "Changed files: ${{ steps.changed-files.outputs.any_changed }}"
 
       - name: Check if build needed
         id: check_build
@@ -115,8 +115,8 @@ jobs:
         run: |
           echo "Pipeline: ${{ matrix.pipeline }}"
           echo "Looking for: runner/docker/Dockerfile.live-base-${{ matrix.pipeline }}"
-          echo "Dockerfile changes: ${{ steps.changed-files.outputs.dockerfile_any_changed_files }}"
-          echo "Liveportrait-specific changes: ${{ steps.changed-files.outputs.liveportrait_any_changed_files }}"
+          echo "Dockerfile changes: ${{ steps.changed-files.outputs.dockerfile_any_changed }}"
+          echo "Liveportrait-specific changes: ${{ steps.changed-files.outputs.liveportrait_any_changed }}"
 
       - name: Cleanup hosted runner
         uses: ./.github/actions/cleanup-runner
