--- a/runner/docker/Dockerfile.live-base-comfyui
+++ b/runner/docker/Dockerfile.live-base-comfyui
@@ -22,7 +22,7 @@ RUN cd /comfyui/custom_nodes && \
     pip install -r requirements.txt
 
 # Upgrade TensorRT to 10.6.0
-RUN pip uninstall -y tensorrt && \ 
+RUN pip uninstall -y tensorrt && \
     pip install tensorrt==10.6.0
 
 RUN pip install torch==2.5.1 torchvision torchaudio tqdm
@@ -37,4 +37,5 @@ RUN git clone https://github.com/yondonfu/comfystream.git && \
 
 # Set up ComfyUI workspace
 ENV COMFY_UI_WORKSPACE="/comfyui"
-RUN ln -s /comfyui/models /models
+RUN ln -s /comfyui/models /models/ComfyUI--models
+# TODO: Consider linking the custom nodes directory as well and set those up in the host, similar to the models directory
