--- a/runner/docker/Dockerfile.live-base-comfyui
+++ b/runner/docker/Dockerfile.live-base-comfyui
@@ -37,5 +37,5 @@ RUN git clone https://github.com/yondonfu/comfystream.git && \
 
 # Set up ComfyUI workspace
 ENV COMFY_UI_WORKSPACE="/comfyui"
-RUN ln -s /comfyui/models /models/ComfyUI--models
+RUN mkdir -p /models && ln -s /comfyui/models /models/ComfyUI--models
 # TODO: Consider linking the custom nodes directory as well and set those up in the host, similar to the models directory
