--- a/runner/docker/Dockerfile.live-base-comfyui-sam2
+++ b/runner/docker/Dockerfile.live-base-comfyui-sam2
@@ -37,15 +37,15 @@ RUN pip install git+https://github.com/pschroedl/ComfyUI-SAM2-Realtime.git
 #     git clone https://github.com/pschroedl/ComfyUI-SAM2-Realtime.git && \
 #     cd ComfyUI-SAM2-Realtime && \
 #     pip install -r requirements.txt  && \
-#     cd ..
+#     cd ..cd 
 
 # Set the working directory for the custom nodes
 WORKDIR /comfyui/custom_nodes
 
 # temp workaround for development - repo is linked in docker/devcontainer from local
-COPY ./ComfyUI-SAM2-Realtime/requirements.txt ./requirements.txt
+COPY ./requirements-live-sam2.txt ./requirements-live-sam2.txt
 
-RUN pip install -r ./requirements.txt
+RUN pip install -r ./requirements-live-sam2.txt
 
 # Set up ComfyUI workspace
 ENV COMFY_UI_WORKSPACE="/comfyui"
