--- a/runner/docker/Dockerfile.live-base-comfyui-sam2
+++ b/runner/docker/Dockerfile.live-base-comfyui-sam2
@@ -15,7 +15,14 @@ ARG PIP_VERSION=23.3.2
 ENV PIP_PREFER_BINARY=1
 RUN pip install --no-cache-dir --upgrade pip==${PIP_VERSION} setuptools==69.5.1 wheel==0.43.0
 
-RUN pip install torch==2.3.1 torchvision torchaudio tqdm
+# Install g++ compiler
+# RUN apt-get update && apt-get install -y \
+#     g++-11 \
+#     && apt-get clean && rm -rf /var/lib/apt/lists/*
+# ENV CXX=/usr/bin/g++-11
+
+# Install Sam2 dependencies
+RUN pip install --no-cache-dir torch==2.3.1 torchvision==0.18.1 torchaudio==2.3.1
 
 # Install comfystream (which includes ComfyUI)
 
@@ -31,21 +38,18 @@ RUN pip install numpy ninja
  # Set TORCH_CUDA_ARCH_LIST environment variable, fixes docker build error 
 ENV TORCH_CUDA_ARCH_LIST="6.0 7.0 7.5 8.0 8.6+PTX"
 # Install ComfyUI-SAM2-Realtime Node (https://github.com/pschroedl/ComfyUI-SAM2-Realtime)
-RUN pip install git+https://github.com/pschroedl/ComfyUI-SAM2-Realtime.git
-
-# RUN cd /comfyui/custom_nodes && \
-#     git clone https://github.com/pschroedl/ComfyUI-SAM2-Realtime.git && \
-#     cd ComfyUI-SAM2-Realtime && \
-#     pip install -r requirements.txt  && \
-#     cd ..cd 
+RUN pip install --no-cache-dir --no-build-isolation git+https://github.com/pschroedl/ComfyUI-SAM2-Realtime.git
+RUN cd /comfyui/custom_nodes && \
+    git clone https://github.com/pschroedl/ComfyUI-SAM2-Realtime.git && \
+    cd ComfyUI-SAM2-Realtime && \
+    pip install -r requirements.txt  && \
+    python setup.py clean && \
+    python setup.py build install && \
+    cp /comfyui/custom_nodes/comfystream/nodes/tensor_utils/* /comfyui/custom_nodes/comfystream && \
+    cd ..
 
 # Set the working directory for the custom nodes
 WORKDIR /comfyui/custom_nodes
-
-# temp workaround for development - repo is linked in docker/devcontainer from local
-COPY ./requirements-live-sam2.txt ./requirements-live-sam2.txt
-
-RUN pip install -r ./requirements-live-sam2.txt
 
 # Set up ComfyUI workspace
 ENV COMFY_UI_WORKSPACE="/comfyui"
