--- a/runner/docker/Dockerfile.live-base-comfyui-sam2
+++ b/runner/docker/Dockerfile.live-base-comfyui-sam2
@@ -41,10 +41,10 @@ RUN cd /comfyui/custom_nodes && \
     pip install -r requirements.txt && \
     cd ..
 
-COPY ComfyUI-SAM2-Realtime /comfyui/custom_nodes/ComfyUI-SAM2-Realtime/
+# COPY ComfyUI-SAM2-Realtime /comfyui/custom_nodes/ComfyUI-SAM2-Realtime/
 
 RUN cd /comfyui/custom_nodes && \
-    # git clone https://github.com/pschroedl/ComfyUI-SAM2-Realtime.git && \
+    git clone https://github.com/pschroedl/ComfyUI-SAM2-Realtime.git && \
     cd ComfyUI-SAM2-Realtime && \
     pip install -r requirements.txt && \ 
     cd ..
