--- a/runner/docker/Dockerfile.live-base-comfyui-sam2
+++ b/runner/docker/Dockerfile.live-base-comfyui-sam2
@@ -15,12 +15,6 @@ ARG PIP_VERSION=23.3.2
 ENV PIP_PREFER_BINARY=1
 RUN pip install --no-cache-dir --upgrade pip==${PIP_VERSION} setuptools==69.5.1 wheel==0.43.0
 
-# Install g++ compiler
-# RUN apt-get update && apt-get install -y \
-#     g++-11 \
-#     && apt-get clean && rm -rf /var/lib/apt/lists/*
-# ENV CXX=/usr/bin/g++-11
-
 # Install Sam2 dependencies
 RUN pip install --no-cache-dir torch==2.3.1 torchvision torchaudio
 
@@ -32,33 +26,19 @@ RUN git clone https://github.com/yondonfu/comfystream.git && \
     cp -r nodes/tensor_utils /comfyui/custom_nodes/ && \
     cd ..
 
-# Set TORCH_CUDA_ARCH_LIST environment variable, fixes docker build error 
-# ENV TORCH_CUDA_ARCH_LIST="6.0 7.0 7.5 8.0 8.6+PTX"
-# RUN pip install numpy ninja
+# Install ComfyUI_RyanOnTheInside custom node
 RUN cd /comfyui/custom_nodes && \ 
     git clone -b disable_add_routes https://github.com/pschroedl/ComfyUI_RyanOnTheInside.git && \
     cd ComfyUI_RyanOnTheInside && \
     pip install -r requirements.txt && \
     cd ..
 
-# COPY ComfyUI-SAM2-Realtime /comfyui/custom_nodes/ComfyUI-SAM2-Realtime/
-
+# Install ComfyUI-SAM2-Realtime custom node
 RUN cd /comfyui/custom_nodes && \
     git clone https://github.com/pschroedl/ComfyUI-SAM2-Realtime.git && \
     cd ComfyUI-SAM2-Realtime && \
-    pip install -r requirements.txt && \ 
+    pip install -r requirements.txt && \
     cd ..
-
-# Install ComfyUI-SAM2-Realtime Node (https://github.com/pschroedl/ComfyUI-SAM2-Realtime)
-# RUN pip install --no-cache-dir --no-build-isolation git+https://github.com/pschroedl/ComfyUI-SAM2-Realtime.git
-# RUN cd /comfyui/custom_nodes && \
-#     git clone https://github.com/pschroedl/ComfyUI-SAM2-Realtime.git && \
-#     cd ComfyUI-SAM2-Realtime && \
-#     pip install -r requirements.txt  && \
-#     python setup.py clean && \
-#     python setup.py build install && \
-#     cp /comfyui/custom_nodes/comfystream/nodes/tensor_utils/* /comfyui/custom_nodes/comfystream && \
-#     cd ..
 
 # Set the working directory for the custom nodes
 WORKDIR /comfyui/custom_nodes
