--- a/runner/.devcontainer/devcontainer.json
+++ b/runner/.devcontainer/devcontainer.json
@@ -4,17 +4,10 @@
 	"name": "ai-runner",
 	// Image to use for the dev container. More info: https://containers.dev/guide/dockerfile.
 	"build": {
-		"dockerfile": "../Dockerfile.live-app__PIPELINE__",
-		"args": {
-			"PIPELINE": "comfyui-sam2"
-		}
+		"dockerfile": "../Dockerfile",
+		// "dockerfile": "../docker/Dockerfile.text_to_speech",
+		"context": ".."
 	},
-	// "build": {
-		
-	// 	"dockerfile": "../Dockerfile",
-	// 	// "dockerfile": "../docker/Dockerfile.text_to_speech",
-	// 	"context": ".."
-	// },
 	"runArgs": [
 		"--gpus=all"
 	],
@@ -36,7 +29,6 @@
 	// Use 'mounts' to make a list of local folders available inside the container.
 	"mounts": [
 		// "source=${localWorkspaceFolder}/models,target=/models,type=bind"
-		"source=${localEnv:HOME}/.lpData/models,target=/models,type=bind",
-		"source=${localEnv:HOME}/ComfyUI-SAM2-Realtime,target=/comfyui/custom_nodes/ComfyUI-SAM2-Realtime,type=bind"
+		"source=${localEnv:HOME}/.lpData/models,target=/models,type=bind"
 	]
 }
