--- a/runner/docker/Dockerfile.live-base-segment_anything_2
+++ b/runner/docker/Dockerfile.live-base-segment_anything_2
@@ -21,7 +21,7 @@ ENV CXX=/usr/bin/g++-11
 # Install Sam2 dependencies
 RUN pip install --no-cache-dir torch==2.4.0 torchvision==0.19.0 torchaudio==2.4.0 xformers==0.0.27.post2 zstd==1.5.5.1
 
-RUN pip install huggingface-hub==0.23.2 ninja
+RUN pip install --no-cache-dir huggingface-hub==0.23.2 ninja
 
 # Set TORCH_CUDA_ARCH_LIST environment variable, fixes build error in segment-anything-2-real-time
 ENV TORCH_CUDA_ARCH_LIST="6.0 7.0 7.5 8.0 8.6+PTX"
@@ -29,6 +29,3 @@ ENV TORCH_CUDA_ARCH_LIST="6.0 7.0 7.5 8.0 8.6+PTX"
 RUN pip install --no-cache-dir --no-build-isolation \
     git+https://github.com/pschroedl/segment-anything-2-real-time@main
 
-# Set environment variables for NVIDIA drivers
-ENV NVIDIA_VISIBLE_DEVICES all
-ENV NVIDIA_DRIVER_CAPABILITIES compute,utility,video
