--- a/.github/workflows/ai-runner-pipelines-docker.yaml
+++ b/.github/workflows/ai-runner-pipelines-docker.yaml
@@ -32,6 +32,7 @@ jobs:
         dockerfile:
           - docker/Dockerfile.segment_anything_2
           - docker/Dockerfile.text_to_speech
+          - docker/Dockerfile.audio_to_text
     steps:
       - name: Check out code
         uses: actions/checkout@v4.1.1
