--- a/runner/docker/Dockerfile.live-base-streamdiffusion
+++ b/runner/docker/Dockerfile.live-base-streamdiffusion
@@ -16,6 +16,7 @@ RUN pip install --no-cache-dir --upgrade pip==${PIP_VERSION} setuptools==69.5.1 
 RUN pip install --no-cache-dir \
     torch==2.1.0 \
     torchvision==0.16.0 \
+    nvidia-ml-py==12.560.30 \
     xformers \
     --index-url https://download.pytorch.org/whl/cu121
 RUN pip install --no-cache-dir \
