--- a/runner/docker/Dockerfile.live-base-comfyui
+++ b/runner/docker/Dockerfile.live-base-comfyui
@@ -35,6 +35,16 @@ RUN git clone https://github.com/yondonfu/comfystream.git && \
     cp -r nodes/tensor_utils /comfyui/custom_nodes/ && \
     cd ..
 
+# Install SAM2 node
+# TODO: Change to the original repo from Peter, when this PR is merged
+# https://github.com/pschroedl/ComfyUI-SAM2-Realtime/pull/2
+RUN git clone https://github.com/leszko/ComfyUI-SAM2-Realtime && \
+    cd ComfyUI-SAM2-Realtime && \
+    git checkout rafal/update-python-version && \
+    pip install -r requirements.txt && \
+    cd .. && \
+    cp -r ComfyUI-SAM2-Realtime /comfyui/custom_nodes/
+
 # Set up ComfyUI workspace
 ENV COMFY_UI_WORKSPACE="/comfyui"
 RUN ln -s /models/ComfyUI--models /comfyui/models
