Revert "pin commit hash for git clone in docker build steps"
This reverts commit c1571478b46c2399e9b4f6e7ee24ea7392899bcf.

--- a/runner/docker/Dockerfile.live-base-comfyui-sam2
+++ b/runner/docker/Dockerfile.live-base-comfyui-sam2
@@ -22,8 +22,8 @@ RUN pip install --no-cache-dir torch==2.3.1 torchvision torchaudio
 ENV TORCH_CUDA_ARCH_LIST="8.0+PTX"
 
 # Install comfystream (which includes ComfyUI)
-RUN pip install git+https://github.com/yondonfu/comfystream.git@53fa9133abd03227612ef8a16bb42100efe0f306
-RUN git clone https://github.com/yondonfu/comfystream.git@53fa9133abd03227612ef8a16bb42100efe0f306 && \
+RUN pip install git+https://github.com/yondonfu/comfystream.git
+RUN git clone https://github.com/yondonfu/comfystream.git && \
     cd comfystream && \
     pip install -r requirements.txt && \
     cp -r nodes/tensor_utils /comfyui/custom_nodes/ && \
@@ -31,21 +31,21 @@ RUN git clone https://github.com/yondonfu/comfystream.git@53fa9133abd03227612ef8
 
 # Install ComfyUI_RyanOnTheInside custom node
 RUN cd /comfyui/custom_nodes && \ 
-    git clone -b disable_add_routes https://github.com/pschroedl/ComfyUI_RyanOnTheInside.git@c026fa8ab84d39d3f4bea62e27d1b6717ad16a19 && \
+    git clone -b disable_add_routes https://github.com/pschroedl/ComfyUI_RyanOnTheInside.git && \
     cd ComfyUI_RyanOnTheInside && \
     pip install -r requirements.txt && \
     cd ..
 
 # Install ComfyUI-SAM2-Realtime custom node
 RUN cd /comfyui/custom_nodes && \
-    git clone https://github.com/pschroedl/ComfyUI-SAM2-Realtime.git@8873c23a14ecba0e48a02b6ce2cfbc5b995f1da9 && \
+    git clone https://github.com/pschroedl/ComfyUI-SAM2-Realtime.git && \
     cd ComfyUI-SAM2-Realtime && \
     pip install -r requirements.txt && \
     cd ..
 
 # Install ComfyUI-Depth-Anything-Tensorrt Node (https://github.com/yuvraj108c/ComfyUI-Depth-Anything-Tensorrt)
 RUN cd /comfyui/custom_nodes && \
-    git clone https://github.com/yuvraj108c/ComfyUI-Depth-Anything-Tensorrt.git@ede57bac05059731f955c1b1563af2c1947f999a && \
+    git clone https://github.com/yuvraj108c/ComfyUI-Depth-Anything-Tensorrt.git && \
     cd ComfyUI-Depth-Anything-Tensorrt && \
     pip install -r requirements.txt && \
     cd ..
