--- a/runner/docker/Dockerfile.live-base-comfyui
+++ b/runner/docker/Dockerfile.live-base-comfyui
@@ -15,15 +15,36 @@ ARG PIP_VERSION=23.3.2
 ENV PIP_PREFER_BINARY=1
 RUN pip install --no-cache-dir --upgrade pip==${PIP_VERSION} setuptools==69.5.1 wheel==0.43.0
 
+# Upgrade TensorRT to 10.6.0
+RUN pip uninstall -y tensorrt && \
+    pip install tensorrt==10.6.0
+
 # Install ComfyUI-Depth-Anything-Tensorrt Node (https://github.com/yuvraj108c/ComfyUI-Depth-Anything-Tensorrt)
 RUN cd /comfyui/custom_nodes && \
     git clone https://github.com/yuvraj108c/ComfyUI-Depth-Anything-Tensorrt.git && \
     cd ComfyUI-Depth-Anything-Tensorrt && \
     pip install -r requirements.txt
 
-# Upgrade TensorRT to 10.6.0
-RUN pip uninstall -y tensorrt && \
-    pip install tensorrt==10.6.0
+# Install ComfyUI-StreamDiffusion (https://github.com/pschroedl/ComfyUI-StreamDiffusion.git)
+RUN git clone https://github.com/pschroedl/ComfyUI-StreamDiffusion.git && \
+    cd ComfyUI-StreamDiffusion && \
+    pip install -r requirements.txt && \
+    cd ..
+# Install ComfyUI-SAM2-Realtime (https://github.com/pschroedl/ComfyUI-SAM2-Realtime.git)
+RUN git clone -b relax_python_3_10 https://github.com/pschroedl/ComfyUI-SAM2-Realtime.git && \
+    cd ComfyUI-SAM2-Realtime && \
+    pip install -r requirements.txt && \
+    cd ..
+
+# Install ComfyUI_RyanOnTheInside (https://github.com/ryanontheinside/ComfyUI_RyanOnTheInside.git)
+RUN git clone https://github.com/ryanontheinside/ComfyUI_RyanOnTheInside.git && \
+    cd ComfyUI_RyanOnTheInside && \
+    pip install -r requirements.txt && \
+    cd ..
+
+# Install ComfyUI-Misc-Effects ( Starburst ) (https://github.com/ryanontheinside/ComfyUI-Misc-Effects.git)
+RUN git clone https://github.com/ryanontheinside/ComfyUI-Misc-Effects.git
+
 
 RUN pip install torch==2.5.1 torchvision torchaudio tqdm
 
