--- a/runner/docker/Dockerfile.live-base-comfyui
+++ b/runner/docker/Dockerfile.live-base-comfyui
@@ -22,25 +22,26 @@ RUN cd /comfyui/custom_nodes && \
     pip install -r requirements.txt
 
 # Install ComfyUI-StreamDiffusion (https://github.com/pschroedl/ComfyUI-StreamDiffusion.git)
-RUN git clone https://github.com/pschroedl/ComfyUI-StreamDiffusion.git && \
+RUN cd /comfyui/custom_nodes && \
+    git clone https://github.com/pschroedl/ComfyUI-StreamDiffusion.git && \
     cd ComfyUI-StreamDiffusion && \
-    pip install -r requirements.txt && \
-    cd ..
+    pip install -r requirements.txt
 
 # Install ComfyUI-SAM2-Realtime (https://github.com/pschroedl/ComfyUI-SAM2-Realtime.git)
-RUN git clone -b relax_python_3_10 https://github.com/pschroedl/ComfyUI-SAM2-Realtime.git && \
+RUN cd /comfyui/custom_nodes && \
+    git clone https://github.com/pschroedl/ComfyUI-SAM2-Realtime.git && \
     cd ComfyUI-SAM2-Realtime && \
-    pip install -r requirements.txt && \
-    cd ..
+    pip install -r requirements.txt
 
 # Install ComfyUI_RyanOnTheInside (https://github.com/ryanontheinside/ComfyUI_RyanOnTheInside.git)
-RUN git clone https://github.com/ryanontheinside/ComfyUI_RyanOnTheInside.git && \
+RUN cd /comfyui/custom_nodes && \
+    git clone https://github.com/ryanontheinside/ComfyUI_RyanOnTheInside.git && \
     cd ComfyUI_RyanOnTheInside && \
-    pip install -r requirements.txt && \
-    cd ..
+    pip install -r requirements.txt
 
 # Install ComfyUI-Misc-Effects ( Starburst ) (https://github.com/ryanontheinside/ComfyUI-Misc-Effects.git)
-RUN git clone https://github.com/ryanontheinside/ComfyUI-Misc-Effects.git
+RUN cd /comfyui/custom_nodes && \
+    git clone https://github.com/ryanontheinside/ComfyUI-Misc-Effects.git
 
 # Upgrade TensorRT to 10.6.0
 RUN pip uninstall -y tensorrt && \
