--- a/runner/docker/Dockerfile.live-base-comfyui
+++ b/runner/docker/Dockerfile.live-base-comfyui
@@ -21,18 +21,6 @@ RUN cd /comfyui/custom_nodes && \
     cd ComfyUI-Depth-Anything-Tensorrt && \
     pip install -r requirements.txt
 
-# Install ComfyUI-StreamDiffusion (https://github.com/pschroedl/ComfyUI-StreamDiffusion.git)
-RUN cd /comfyui/custom_nodes && \
-    git clone https://github.com/pschroedl/ComfyUI-StreamDiffusion.git && \
-    cd ComfyUI-StreamDiffusion && \
-    pip install -r requirements.txt
-
-# Install ComfyUI-SAM2-Realtime (https://github.com/pschroedl/ComfyUI-SAM2-Realtime.git)
-RUN cd /comfyui/custom_nodes && \
-    git clone https://github.com/pschroedl/ComfyUI-SAM2-Realtime.git && \
-    cd ComfyUI-SAM2-Realtime && \
-    pip install -r requirements.txt
-
 # Install ComfyUI_RyanOnTheInside (https://github.com/ryanontheinside/ComfyUI_RyanOnTheInside.git)
 RUN cd /comfyui/custom_nodes && \
     git clone https://github.com/ryanontheinside/ComfyUI_RyanOnTheInside.git && \
@@ -54,8 +42,19 @@ RUN pip install git+https://github.com/yondonfu/comfystream.git
 RUN git clone https://github.com/yondonfu/comfystream.git && \
     cd comfystream && \
     pip install -r requirements.txt && \
-    cp -r nodes/tensor_utils /comfyui/custom_nodes/ && \
-    cd ..
+    cp -r nodes/tensor_utils /comfyui/custom_nodes/ 
+
+# Install ComfyUI-SAM2-Realtime (https://github.com/pschroedl/ComfyUI-SAM2-Realtime.git)
+RUN cd /comfyui/custom_nodes && \
+    git clone https://github.com/pschroedl/ComfyUI-SAM2-Realtime.git && \
+    cd ComfyUI-SAM2-Realtime && \
+    pip install -r requirements.txt
+
+# Install ComfyUI-StreamDiffusion (https://github.com/pschroedl/ComfyUI-StreamDiffusion.git)
+RUN cd /comfyui/custom_nodes && \
+    git clone https://github.com/pschroedl/ComfyUI-StreamDiffusion.git && \
+    cd ComfyUI-StreamDiffusion && \
+    pip install -r requirements.txt
 
 # Set up ComfyUI workspace
 ENV COMFY_UI_WORKSPACE="/comfyui"
