--- a/runner/docker/Dockerfile.live-base-comfyui
+++ b/runner/docker/Dockerfile.live-base-comfyui
@@ -19,11 +19,21 @@ RUN pip install --no-cache-dir --upgrade pip==${PIP_VERSION} setuptools==69.5.1 
 RUN cd /comfyui/custom_nodes && \
     git clone https://github.com/yuvraj108c/ComfyUI-Depth-Anything-Tensorrt.git && \
     cd ComfyUI-Depth-Anything-Tensorrt && \
+    git checkout ede57bac05059731f955c1b1563af2c1947f999a && \
     pip install -r requirements.txt
 
-# Upgrade TensorRT to 10.6.0
-RUN pip uninstall -y tensorrt && \
-    pip install tensorrt==10.6.0
+# Install ComfyUI_RyanOnTheInside (https://github.com/ryanontheinside/ComfyUI_RyanOnTheInside.git)
+RUN cd /comfyui/custom_nodes && \
+    git clone https://github.com/pschroedl/ComfyUI_RyanOnTheInside.git && \
+    cd ComfyUI_RyanOnTheInside && \
+    git checkout c5592719d5188cb6bba81287a8af123637eadf79 && \
+    pip install -r requirements.txt
+
+# Install ComfyUI-Misc-Effects ( Starburst ) (https://github.com/ryanontheinside/ComfyUI-Misc-Effects.git)
+RUN cd /comfyui/custom_nodes && \
+    git clone https://github.com/ryanontheinside/ComfyUI-Misc-Effects.git && \
+    cd ComfyUI-Misc-Effects && \
+    git checkout c6b360c78611134c3723388170475eb4898ff6b7
 
 RUN pip install torch==2.5.1 torchvision torchaudio tqdm nvidia-ml-py==12.560.30
 
@@ -32,8 +42,25 @@ RUN pip install git+https://github.com/yondonfu/comfystream.git
 RUN git clone https://github.com/yondonfu/comfystream.git && \
     cd comfystream && \
     pip install -r requirements.txt && \
-    cp -r nodes/tensor_utils /comfyui/custom_nodes/ && \
-    cd ..
+    cp -r nodes/tensor_utils /comfyui/custom_nodes/ 
+
+# Install ComfyUI-SAM2-Realtime (https://github.com/pschroedl/ComfyUI-SAM2-Realtime.git)
+RUN cd /comfyui/custom_nodes && \
+    git clone https://github.com/pschroedl/ComfyUI-SAM2-Realtime.git && \
+    cd ComfyUI-SAM2-Realtime && \
+    git checkout 3839d938d60b10edae1ade566f085761e360ad9d && \
+    pip install -r requirements.txt
+
+# Install ComfyUI-StreamDiffusion (https://github.com/pschroedl/ComfyUI-StreamDiffusion.git)
+RUN cd /comfyui/custom_nodes && \
+    git clone https://github.com/pschroedl/ComfyUI-StreamDiffusion.git && \
+    cd ComfyUI-StreamDiffusion && \
+    git checkout 98cb9a4f56659a81cbf1969c1b88624150c39ebf && \
+    pip install -r requirements.txt
+
+# Upgrade TensorRT to 10.6.0
+RUN pip uninstall -y tensorrt && \
+    pip install tensorrt==10.6.0
 
 # Set up ComfyUI workspace
 ENV COMFY_UI_WORKSPACE="/comfyui"
