--- a/runner/requirements.txt
+++ b/runner/requirements.txt
@@ -20,5 +20,4 @@ protobuf==5.27.2
 bitsandbytes==0.43.3
 psutil==6.0.0
 PyYAML==6.0.2
-nvidia-ml-py==12.560.30
-pynvml==12.0.0
+nvidia-ml-py==12.560.30  # Includes pynvml.
