--- a/.github/workflows/ai-worker-test.yaml
+++ b/.github/workflows/ai-worker-test.yaml
@@ -19,9 +19,12 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up Go
+        id: go
         uses: actions/setup-go@v5
         with:
-          go-version: "1.23"
+          go-version-file: './go.mod'
+          cache: true
+          cache-dependency-path: go.sum
 
       - name: Install dependencies
         working-directory: worker
