--- a/.github/workflows/ai-runner-live-pipelines-docker.yaml
+++ b/.github/workflows/ai-runner-live-pipelines-docker.yaml
@@ -53,9 +53,9 @@ jobs:
           )
         run: echo "should_build=true" >> $GITHUB_OUTPUT
 
-      - name: Cleanup hosted runner
-        uses: ./.github/actions/cleanup-runner-non-sudo
-        if: steps.check_build.outputs.should_build == 'true'
+      # - name: Cleanup hosted runner
+      #   uses: ./.github/actions/cleanup-runner-non-sudo
+      #   if: steps.check_build.outputs.should_build == 'true'
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -106,8 +106,8 @@ jobs:
               - runner/images/**
               - runner/requirements-liveportrait.txt
 
-      - name: Cleanup hosted runner
-        uses: ./.github/actions/cleanup-runner-non-sudo
+      # - name: Cleanup hosted runner
+      #   uses: ./.github/actions/cleanup-runner-non-sudo
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
