--- a/runner/docker/Dockerfile.live-base-comfyui
+++ b/runner/docker/Dockerfile.live-base-comfyui
@@ -51,11 +51,11 @@ RUN cd /comfyui/custom_nodes && \
     git checkout 3839d938d60b10edae1ade566f085761e360ad9d && \
     pip install -r requirements.txt
 
-# Install ComfyUI-SAM2-Realtime (https://github.com/pschroedl/ComfyUI-SAM2-Realtime.git)
+# Install ComfyUI-Florence2-Vision (https://github.com/ad-astra-video/ComfyUI-Florence2-Vision.git)
 RUN cd /comfyui/custom_nodes && \
     git clone https://github.com/ad-astra-video/ComfyUI-Florence2-Vision.git && \
     cd ComfyUI-Florence2-Vision && \
-    git checkout 65ccb1c6a7d42079b5be5e79756f7e32210c34f5 && \
+    git checkout 1472659a2802aeb2e3159b2d8e19373de01d28f7 && \
     pip install -r requirements.txt
 
 # Install ComfyUI-StreamDiffusion (https://github.com/pschroedl/ComfyUI-StreamDiffusion.git)
