--- a/.github/workflows/ai-runner-live-pipelines-docker.yaml
+++ b/.github/workflows/ai-runner-live-pipelines-docker.yaml
@@ -26,7 +26,7 @@ jobs:
     name: Build common live base image
     permissions:
       pull-requests: read
-    runs-on: [self-hosted, linux, amd64]
+    runs-on: gpu-amd64
     steps:
       - name: Check out code
         uses: actions/checkout@v4.1.1
@@ -77,7 +77,7 @@ jobs:
   build-pipeline-images:
     name: Build pipeline images
     needs: build-common-base
-    runs-on: [self-hosted, linux, amd64]
+    runs-on: gpu-amd64
     permissions:
       pull-requests: read
     strategy:
@@ -166,7 +166,7 @@ jobs:
   build-noop:
     name: Build pipeline image (noop)
     needs: build-common-base
-    runs-on: ubuntu-20.04
+    runs-on: gpu-amd64
     permissions:
       pull-requests: read
     steps:
